objects/Fund__c.object
<CustomObject>
    <fields>
        <fullName>Default_Trend__c</fullName>
        <label>Standardentwicklung</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fond_ImpId__c</fullName>
        <externalId>true</externalId>
        <label>Fond_ImpId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISIN__c</fullName>
        <label>ISIN</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Bezeichnung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Fond_ID__c</fullName>
        <label>Old Fond ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rate_Count__c</fullName>
        <label>Kurse</label>
        <summaryForeignKey>Rate__c.Fund__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Fonds</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fonds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>ISIN__c</columns>
        <columns>Rate_Count__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>